# SoundLab

./: .gitignore  pyproject.toml
Image2Wavetable/: img2wavetable.py
RissetBeat/: risset_generator.py
Scripts/RissetBeat/: requirements.txt
Scripts/ScaleExplorer/: main_scale_explorer.py
Scripts/SoundMatching/: main_sound_matching.py
SpeakerSpectrogram/: main_speaker_spectrogram.py  requirements.txt
soundlab/: spectrogram.py  tools.py
