[tool.poetry]
name = "soundlab"
version = "0.1.0"
description = ""
authors = ["Emmanuel Girardin <emmanuel.girardin@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scipy = "^1.13.0"
matplotlib = "^3.8.4"
guibbon = "^0.2.1"
librosa = "^0.10.2.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
